# ae-mnist-project

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  reconstruct_digits.py  requirements.txt
data/: dataloader.py
data/reference_digits/: selected_indices_seed42.json
experiments/ae_base/: config.yaml
experiments/classification/: README.md
experiments/config_templates/: config-for-a-simple-vae.yaml
experiments/exp001_vae_base/: config.yaml
experiments/exp002_ae_base/: config.yaml
experiments/latent_space/: README.md
experiments/reconstruction/: README.md
experiments/vae_50epoch/: config.yaml
models/: ae.py  vae.py  vae_encoder.py  vanilla_autoencoder.py  variational_autoencoder.py
runs/run001_vae_base/results/: metrics.json  training_history.csv
runs/run002_ae_base/results/: metrics.json  training_history.csv
runs/run003_vae_50epoch/: config.yaml
runs/run003_vae_50epoch/results/: metrics.json  training_history.csv
scripts/: create_original_digits.py  run_training.py
src/loaders/: dataloader.py
src/models/: ae_encoder.py  decoder.py
training/: trainer.py
