[project]
name = "ae-mnist"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "pyyaml==6.0.2",
  "pandas",
  "tqdm",
  "matplotlib>=3.10.8",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
